ENV/Docker-Registry/registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30797
      protocol: TCP
  selector:
    app: docker-registry
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: image-file
              mountPath: /var/lib/registry
      volumes:
        - name: image-file
          hostPath:
            path: /ori-data/registry
