ENV/Docker-Registry/ingress-registry.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: secret
  rules:
    - host: kube-bill.of.com
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: 5000
